--- a/libraries/trainers/CMakeLists.txt
+++ b/libraries/trainers/CMakeLists.txt
@@ -19,11 +19,13 @@ set (INCLUDE include/BaggingIncrementalTrainer.h
              include/ITrainer.h
              include/MultiEpochIncrementalTrainer.h
              include/SortingTreeTrainer.h
+             include/SweepingIncrementalTrainer.h
              include/SGDIncrementalTrainer.h)
 
 set (TCC tcc/BaggingIncrementalTrainer.tcc
          tcc/MultiEpochIncrementalTrainer.tcc
          tcc/SortingTreeTrainer.tcc
+         tcc/SweepingIncrementalTrainer.tcc
          tcc/SGDIncrementalTrainer.tcc)
 
 source_group("src" FILES ${SRC})
