--- a/libraries/trainers/CMakeLists.txt
+++ b/libraries/trainers/CMakeLists.txt
@@ -15,6 +15,7 @@ endif()
 set (SRC src/Nothing.cpp)
 
 set (INCLUDE include/BaggingIncrementalTrainer.h
+             include/EvaluatingIncrementalTrainer.h
              include/IIncrementalTrainer.h
              include/ITrainer.h
              include/MultiEpochIncrementalTrainer.h
@@ -22,6 +23,7 @@ set (INCLUDE include/BaggingIncrementalTrainer.h
              include/SGDIncrementalTrainer.h)
 
 set (TCC tcc/BaggingIncrementalTrainer.tcc
+         tcc/EvaluatingIncrementalTrainer.tcc         
          tcc/MultiEpochIncrementalTrainer.tcc
          tcc/SortingTreeTrainer.tcc
          tcc/SGDIncrementalTrainer.tcc)
