(Mostly) added code for visiting whole graph. Made (cheesy?) read-only properties for accessing type-safe node outputs.

--- a/libraries/graph/CMakeLists.txt
+++ b/libraries/graph/CMakeLists.txt
@@ -14,6 +14,7 @@ endif()
 
 set (SRC src/DirectedGraph.cpp
          src/Node.cpp
+         src/NodeInput.cpp
          src/NodeOutput.cpp
          src/ConstantNode.cpp
          src/ExtremalValNode.cpp
