Generates XML, but also produces an error

--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -14,3 +14,4 @@ endif()
 
 # add_subdirectory(R) # currently doesn't compile because std_shared_ptr.i doesn't exist for R
 add_subdirectory(csharp)
+add_subdirectory(xml)
