Moved old graph files to new directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ enable_testing()
 add_subdirectory(libraries/common)
 add_subdirectory(libraries/dataset)
 add_subdirectory(libraries/features)
-add_subdirectory(libraries/graph)
+add_subdirectory(libraries/model)
 add_subdirectory(libraries/layers)
 add_subdirectory(libraries/linear)
 add_subdirectory(libraries/lossFunctions)
