Created first cut of compiler library that can actually BUILD. Don't worry - this will change a fair bit tomorrow.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ enable_testing()
 
 # Include cmake projects for libraries and executables
 add_subdirectory(libraries/common)
+add_subdirectory(libraries/compiler)
 add_subdirectory(libraries/dataset)
 add_subdirectory(libraries/evaluators)
 add_subdirectory(libraries/features)
