CompilableMap --> LLVM IR... starting on this.

--- a/tools/utilities/compileNew/CMakeLists.txt
+++ b/tools/utilities/compileNew/CMakeLists.txt
@@ -8,6 +8,13 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 set (PROJ_NAME compileNew)
 PROJECT(${PROJ_NAME})
 
+add_compile_options(-w14062 /Zc:inline /Zc:strictStrings /Zc:rvalueCast /Zc:sizedDealloc- /D_SCL_SECURE_NO_DEPRECATE /D_SCL_SECURE_NO_WARNINGS)
+add_compile_options( /wd4141 /wd4146 /wd4180 /wd4244 /wd4258 /wd4267 /wd4291 /wd4345 /wd4351 /wd4355 /wd4456 /wd4457 /wd4458 /wd4459 /wd4503 /wd4624 /wd4722 /wd4800 /wd4100 /wd4127 /wd4512 /wd4505 /wd4610 /wd4510 /wd4702 /wd4245 /wd4706 /wd4310 /wd4701 /wd4703 /wd4389 /wd4611 /wd4805 /wd4204 /wd4577 /wd4091 /wd4592 /wd4319 /wd4324)
+
+if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES Clang)
+  add_compile_options(-std=c++1y)
+endif()
+
 #enable C++11 in GCC, etc.
 if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES Clang)
   add_compile_options(-std=c++1y)
@@ -48,6 +55,11 @@ include_directories(${CMAKE_SOURCE_DIR}/libraries/linear/include)
 include_directories(${CMAKE_SOURCE_DIR}/libraries/utilities/include)
 include_directories(${CMAKE_SOURCE_DIR}/libraries/common/include)
 include_directories(${CMAKE_SOURCE_DIR}/libraries/compiler/include)
+include_directories(${CMAKE_SOURCE_DIR}/external/llvm/include)
+include_directories(${CMAKE_SOURCE_DIR}/external/llvm/include/llvm)
+include_directories(${CMAKE_SOURCE_DIR}/external/llvm/include/Support)
+include_directories(${CMAKE_SOURCE_DIR}/external/llvm/include/machine)
+include_directories(${CMAKE_SOURCE_DIR}/external/llvm/include/IR)
 
 # create executable in build\bin
 set (GLOBAL_BIN_DIR ${CMAKE_BINARY_DIR}/bin)
@@ -67,6 +79,6 @@ set_property(TARGET LLVMSupport PROPERTY IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/e
 add_library(LLVMBitWriter STATIC IMPORTED)
 set_property(TARGET LLVMBitWriter PROPERTY IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/external/llvm/lib/LLVMBitWriter.lib)
 
-target_link_libraries(${PROJ_NAME} utilities layers linear common LLVMCore LLVMAnalysis LLVMAsmParser LLVMSupport LLVMBitWriter)
+target_link_libraries(${PROJ_NAME} utilities layers linear common compiler LLVMCore LLVMAnalysis LLVMAsmParser LLVMSupport LLVMBitWriter)
 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "tools/utilities")
