Fixed to not build the XML files by default

--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -14,4 +14,5 @@ endif()
 
 # add_subdirectory(R) # currently doesn't compile because std_shared_ptr.i doesn't exist for R
 add_subdirectory(csharp)
-add_subdirectory(xml)
+# add_subdirectory(xml) # currently doesn't compile because CMake wants to compile SWIG's ouptut code file, which doesn't work when it's XML
+
