Fixed to observe style guidelines more closely

--- a/libraries/model/CMakeLists.txt
+++ b/libraries/model/CMakeLists.txt
@@ -38,6 +38,7 @@ set (TCC tcc/ConstantNode.tcc
          tcc/InputPort.tcc
          tcc/ModelGraph.tcc
          tcc/Node.tcc
+         tcc/OutputPort.tcc
          tcc/OutputRef.tcc
          tcc/ValueSelectorNode.tcc
 )
