Added hierarchical CMakeLists in private dir fixed bug in Exception catch exceptions by const reference

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ enable_testing()
 add_subdirectory(libraries)
 add_subdirectory(tools)
 add_subdirectory(scripts)
+add_subdirectory(private)
 
 # Add SWIG-generated interfaces
 
