Support LLVM optional build - first cut.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,13 @@ endif()
 # Options
 option(SWIG_ENABLED "Enable swig interfaces" ON)
 option(DOXYGEN_ENABLED "Enable Doxygen interfaces" ON)
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/private/binaries/llvm")
+  set(LLVM_ENABLED ON)
+  message("LLVM Compilation Enabled")
+else()
+  set(LLVM_ENABLED OFF)
+  message("LLVM Compilation Disabled")
+endif()
 
 # Include modules in the CMake directory.
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake")
@@ -43,7 +50,9 @@ enable_testing()
 
 # Include cmake projects for libraries and executables
 add_subdirectory(libraries/common)
-add_subdirectory(libraries/compiler)
+if (LLVM_ENABLED)
+  add_subdirectory(libraries/compiler)
+endif()
 add_subdirectory(libraries/dataset)
 add_subdirectory(libraries/evaluators)
 add_subdirectory(libraries/features)
@@ -61,7 +70,9 @@ add_subdirectory(tools/trainers/sortingTreeTrainer)
 add_subdirectory(tools/trainers/sweepingSGDTrainer)
 add_subdirectory(tools/utilities/apply)
 add_subdirectory(tools/utilities/compile)
-add_subdirectory(tools/utilities/compileNew)
+if (LLVM_ENABLED)
+	add_subdirectory(tools/utilities/compileNew)
+endif()
 add_subdirectory(tools/utilities/print)
 add_subdirectory(scripts)
 
