Compiler new in build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,9 @@ add_subdirectory(tools/trainers/sortingTreeTrainer)
 add_subdirectory(tools/trainers/sweepingSGDTrainer)
 add_subdirectory(tools/utilities/apply)
 add_subdirectory(tools/utilities/compile)
+if (LLVM_ENABLED)
+	add_subdirectory(tools/utilities/compileNew)
+endif()
 add_subdirectory(tools/utilities/print)
 add_subdirectory(scripts)
 add_subdirectory(private)
