--- a/libraries/predictors/CMakeLists.txt
+++ b/libraries/predictors/CMakeLists.txt
@@ -12,10 +12,12 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/DecisionTreePredictor.cpp
+set (SRC src/BinaryDecisionTreePredictor.cpp
+         src/DecisionTreePredictor.cpp
          src/LinearPredictor.cpp)
 
-set (INCLUDE include/DecisionTreePredictor.h
+set (INCLUDE include/BinaryDecisionTreePredictor.h
+             include/DecisionTreePredictor.h
              include/EnsemblePredictor.h
              include/LinearPredictor.h)
 
