Moved compiler to new CMakeLists

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -5,6 +5,9 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 
 add_subdirectory(common)
+if (LLVM_ENABLED)
+  add_subdirectory(compiler)
+endif()
 add_subdirectory(dataset)
 add_subdirectory(evaluators)
 add_subdirectory(features)
