--- a/tools/utilities/CMakeLists.txt
+++ b/tools/utilities/CMakeLists.txt
@@ -6,4 +6,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 
 add_subdirectory(apply)
 add_subdirectory(compile)
+if (LLVM_ENABLED)
+	add_subdirectory(compileNew)
+endif()
 add_subdirectory(print)
