--- a/libraries/nodes/CMakeLists.txt
+++ b/libraries/nodes/CMakeLists.txt
@@ -22,18 +22,13 @@ source_group("include" FILES ${INCLUDE})
 source_group("src" FILES ${SRC})
 source_group("tcc" FILES ${TCC})
 
-
 add_library(${PROJ_NAME} ${SRC} ${INCLUDE} ${TCC})
 target_include_directories(${PROJ_NAME} INTERFACE include)
 target_include_directories(${PROJ_NAME} INTERFACE ../model/include)
 target_include_directories(${PROJ_NAME} INTERFACE ../utilities/include)
-
-target_link_libraries(${PROJ_NAME} model nodes utilities)
+target_link_libraries(${PROJ_NAME} model utilities)
 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
-#    add_library(Catch INTERFACE)
-#    add_dependencies(Catch CatchDownload)
-#    target_include_directories(Catch INTERFACE ${CATCH_DOWNLOAD_DIR}/include)
 
 #
 # test project
