--- a/libraries/trainers/CMakeLists.txt
+++ b/libraries/trainers/CMakeLists.txt
@@ -34,7 +34,6 @@ source_group("src" FILES ${SRC})
 source_group("include" FILES ${INCLUDE})
 source_group("tcc" FILES ${TCC})
 
-include_directories(include)
 include_directories(../linear/include)
 include_directories(../dataset/include)
 include_directories(../layers/include)
@@ -43,6 +42,7 @@ include_directories(../evaluators/include)
 include_directories(../utilities/include)
 
 add_library(${PROJ_NAME} ${SRC} ${INCLUDE} ${TCC})
+target_include_directories(${PROJ_NAME} PUBLIC include)
 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
 
