--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -60,8 +60,6 @@ source_group("src" FILES ${SRC})
 source_group("include" FILES ${INCLUDE})
 source_group("tcc" FILES ${TCC})
 
-include_directories(include)
-include_directories(tcc)
 include_directories(../dataset/include)
 include_directories(../layers/include)
 include_directories(../linear/include)
@@ -69,6 +67,7 @@ include_directories(../predictors/include)
 include_directories(../lossFunctions/include)
 
 add_library(${PROJ_NAME} ${SRC} ${INCLUDE} ${TCC})
+target_include_directories(${PROJ_NAME} PUBLIC include)
 
 if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
 target_link_libraries(${PROJ_NAME} -pthread)
