Removed extraneous include_directories directives.

--- a/libraries/evaluators/CMakeLists.txt
+++ b/libraries/evaluators/CMakeLists.txt
@@ -29,15 +29,9 @@ source_group("src" FILES ${SRC})
 source_group("include" FILES ${INCLUDE})
 source_group("tcc" FILES ${TCC})
 
-include_directories(../linear/include)
-include_directories(../dataset/include)
-include_directories(../layers/include)
-include_directories(../predictors/include)
-include_directories(../utilities/include)
-
 add_library(${PROJ_NAME} ${SRC} ${INCLUDE} ${TCC})
 target_include_directories(${PROJ_NAME} PUBLIC include)
-
+target_link_libraries(${TEST_NAME} dataset)
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
 
 #
