--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -61,7 +61,6 @@ target_link_libraries(${PROJ_NAME} dataset layers linear utilities lossFunctions
 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
 
-
 #
 # test project
 #
@@ -76,11 +75,9 @@ set (TEST_INCLUDE )
 source_group("src" FILES ${TEST_SRC})
 source_group("include" FILES ${TEST_INCLUDE})
 
-include_directories(../testing/include)
-include_directories(test/include)
 
 add_executable(${TEST_NAME} ${TEST_SRC} ${TEST_INCLUDE} ${INCLUDE})
-
+target_include_directories(${TEST_NAME} PRIVATE test/include)
 target_link_libraries(${TEST_NAME} dataset linear testing utilities lossFunctions predictors trainers)
 
 set_property(TARGET ${TEST_NAME} PROPERTY FOLDER "tests")
