--- a/libraries/features/CMakeLists.txt
+++ b/libraries/features/CMakeLists.txt
@@ -62,11 +62,8 @@ set (TEST_INCLUDE test/include/Features_test.h)
 source_group("src" FILES ${TEST_SRC})
 source_group("include" FILES ${TEST_INCLUDE})
 
-include_directories(../testing/include)
-include_directories(test/include)
-
 add_executable(${TEST_NAME} ${TEST_SRC} ${TEST_INCLUDE} ${INCLUDE})
-
+target_include_directories(${TEST_NAME} PRIVATE test/include)
 target_link_libraries(${TEST_NAME} testing layers features utilities)
 
 set_property(TARGET ${TEST_NAME} PROPERTY FOLDER "tests")
